feat(customers): added annotation for customers
